server: newui phase3; annotation from view routes

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -69,6 +69,9 @@
 
 		/* other */
 		.striked { text-decoration: line-through !important; }
+		td.abutton_annotate:hover, td.abutton_annotate_view:hover {
+			border-right: 2px dotted #ffc107;
+		}
 	</style>
 
 	{% block style %}{% endblock %}
