server: newui phase3; refactor annotables hooks naming for datatables elements

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -69,7 +69,7 @@
 
 		/* other */
 		.striked { text-decoration: line-through !important; }
-		td.abutton_annotate:hover, td.abutton_annotate_view:hover {
+		td.abutton_annotate_dt:hover, td.abutton_annotate_view:hover {
 			border-right: 2px dotted #ffc107;
 		}
 	</style>
