--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -98,14 +98,14 @@
 					Sner.dt.column('name'),
 					Sner.dt.column('state'),
 					Sner.dt.column('info'),
-					Sner.dt.column('tags', {'className': 'abutton_annotate', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
-					Sner.dt.column('comment', {'className': 'abutton_annotate'}),
+					Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
+					Sner.dt.column('comment', {'className': 'abutton_annotate_dt'}),
 					Sner.dt.column_buttons(Sner.storage.hbs.service_controls)
 				],
 				'order': [[5, 'asc']],
 				'drawCallback': function (settings) {
 					Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
-					this.find('td.abutton_annotate').on('dblclick', {'dt': this.api(), 'route_name': 'storage.service_annotate_route'}, Sner.storage.action_annotate);
+					this.find('td.abutton_annotate_dt').on('dblclick', {'dt': this.api(), 'route_name': 'storage.service_annotate_route'}, Sner.storage.action_annotate_dt);
 				}
 			};
 			$(document).ready(function() {
@@ -150,15 +150,15 @@
 					Sner.dt.column('xtype', {'visible': false}),
 					Sner.dt.column('severity', {'render': function(data, type, row, meta) { return Sner.storage.hbs.severity_label(row); }}),
 					Sner.dt.column('refs', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_refs(row); }}),
-					Sner.dt.column('tags', {'className': 'abutton_annotate', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
-					Sner.dt.column('comment', {'className': 'abutton_annotate'}),
+					Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
+					Sner.dt.column('comment', {'className': 'abutton_annotate_dt'}),
 					Sner.dt.column_buttons(Sner.storage.hbs.vuln_controls)
 				],
 				'order': [[1, 'asc']],
 				'select': {'style': 'multi', 'selector': 'td:first-child'},
 				'drawCallback': function (settings) {
 					Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
-					this.find('td.abutton_annotate').on('dblclick', {'dt': this.api(), 'route_name': 'storage.vuln_annotate_route'}, Sner.storage.action_annotate);
+					this.find('td.abutton_annotate_dt').on('dblclick', {'dt': this.api(), 'route_name': 'storage.vuln_annotate_route'}, Sner.storage.action_annotate_dt);
 				}
 			};
 			$(document).ready(function() {
@@ -185,13 +185,13 @@
 					Sner.dt.column('service'),
 					Sner.dt.column('xtype'),
 					Sner.dt.column('data', {'className': 'forcewrap'}),
-					Sner.dt.column('tags', {'className': 'abutton_annotate', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
-					Sner.dt.column('comment', {'className': 'abutton_annotate'}),
+					Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
+					Sner.dt.column('comment', {'className': 'abutton_annotate_dt'}),
 					Sner.dt.column_buttons(Sner.storage.hbs.note_controls)
 				],
 				'drawCallback': function (settings) {
 					Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
-					this.find('td.abutton_annotate').on('dblclick', {'dt': this.api(), 'route_name': 'storage.note_annotate_route'}, Sner.storage.action_annotate);
+					this.find('td.abutton_annotate_dt').on('dblclick', {'dt': this.api(), 'route_name': 'storage.note_annotate_route'}, Sner.storage.action_annotate_dt);
 				}
 			};
 			$(document).ready(function() {
