--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -18,15 +18,15 @@
 			Sner.dt.column('xtype', {'visible': false}),
 			Sner.dt.column('severity', {'render': function(data, type, row, meta) { return Sner.storage.hbs.severity_label(row); }}),
 			Sner.dt.column('refs', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_refs(row); }}),
-			Sner.dt.column('tags', {'className': 'abutton_annotate', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
-			Sner.dt.column('comment', {'className': 'abutton_annotate'}),
+			Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
+			Sner.dt.column('comment', {'className': 'abutton_annotate_dt'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.vuln_controls)
 		],
 		'order': [[1, 'asc']],
 		'select': {'style': 'multi', 'selector': 'td:first-child'},
 		'drawCallback': function (settings) {
 			Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
-			this.find('td.abutton_annotate').on('dblclick', {'dt': this.api(), 'route_name': 'storage.vuln_annotate_route'}, Sner.storage.action_annotate);
+			this.find('td.abutton_annotate_dt').on('dblclick', {'dt': this.api(), 'route_name': 'storage.vuln_annotate_route'}, Sner.storage.action_annotate_dt);
 		}
 	};
 	$(document).ready(function() {
