--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -48,11 +48,11 @@
 
 	<style>
 		/* content vs navbar spacing */
-		body { padding-top: 4rem; }
+		body { padding-top: 3rem; }
 
 		/* navbar logo */
 		.navbar-brand { padding: 0; }
-		.navbar-brand img { height: 2rem; }
+		.navbar-brand img { height: 1.8rem; }
 
 		/* required items on forms */
 		div.form-group.required label:after { content:"*"; color:red; }
@@ -78,7 +78,7 @@
 	{% block script %}{% endblock %}
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top py-0">
 		<a class="navbar-brand" href="{{ url_for('index_route') }}"><img src="{{ url_for('static', filename='logo.png') }}"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault">
 			<span class="navbar-toggler-icon"></span>
