--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -16,7 +16,7 @@
 			Sner.dt.column('cnt_v'),
 			Sner.dt.column('cnt_n'),
 			Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
-			Sner.dt.column('comment', {'className': 'abutton_annotate_dt'}),
+			Sner.dt.column('comment', {'className': 'abutton_annotate_dt forcewrap'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.host_controls)
 		],
 		'drawCallback': function (settings) {
