--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -19,7 +19,7 @@
 			Sner.dt.column('severity', {'render': function(data, type, row, meta) { return Sner.storage.hbs.severity_label(row); }}),
 			Sner.dt.column('refs', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_refs(row); }}),
 			Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
-			Sner.dt.column('comment', {'className': 'abutton_annotate_dt'}),
+			Sner.dt.column('comment', {'className': 'abutton_annotate_dt forcewrap'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.vuln_controls)
 		],
 		'order': [[1, 'asc']],
