--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -37,5 +37,9 @@
 	</div>
 {% endcall %}
 
+<div id="host_list_table_toolbar" class="dt_toolbar">
+	{% if 'filter' in request.args %}<a class="btn btn-info" href="{{ url_for('storage.host_list_route') }}">unfilter</a>{% endif %}
+</div>
+
 <table id="host_list_table" class="table table-hover table-sm" width="100%"></table>
 {% endblock %}
