server: new tag helpers
https://gitlab.flab.cesnet.cz/bodik/sner4/issues/219

--- a/sner/server/templates/common_macros.html
+++ b/sner/server/templates/common_macros.html
@@ -16,6 +16,8 @@
 		<a class="btn btn-outline-secondary btn-sm abutton_addtag">Info</a>
 		<a class="btn btn-outline-secondary btn-sm abutton_addtag">Report</a>
 		<a class="btn btn-outline-secondary btn-sm abutton_addtag">Todo</a>
+		<a class="btn btn-outline-secondary btn-sm abutton_addtag">Reviewed</a>
+		<a class="btn btn-outline-secondary btn-sm abutton_addtag">Sslhell</a>
 	</div>
 </div>
 <script type="text/javascript">
