server: rename _by_id to multiid

--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -165,9 +165,9 @@
 				var dt_host_view_vuln_table = $('#host_view_vuln_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_host_view_vuln_table_options));
 				$('#host_view_vuln_table_toolbar .abutton_selectall').on('click', {'dt': dt_host_view_vuln_table}, Sner.dt.selectall);
 				$('#host_view_vuln_table_toolbar .abutton_selectnone').on('click', {'dt': dt_host_view_vuln_table}, Sner.dt.selectnone);
-				$('#host_view_vuln_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_by_id_route'), 'action': 'set'}, Sner.action_tag_by_id);
-				$('#host_view_vuln_table_toolbar .abutton_untagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_by_id_route'), 'action': 'unset'}, Sner.action_tag_by_id);
-				$('#host_view_vuln_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_delete_by_id_route')}, Sner.action_delete_by_id);
+				$('#host_view_vuln_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_multiid_route'), 'action': 'set'}, Sner.action_tag_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_untagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_multiid_route'), 'action': 'unset'}, Sner.action_tag_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_delete_multiid_route')}, Sner.action_delete_multiid);
 			});
 		</script>
 	</div>
