server: refactor visuals ui javascript

--- a/sner/server/templates/visuals/dnstree.html
+++ b/sner/server/templates/visuals/dnstree.html
@@ -164,6 +164,6 @@ function ticked() {
 }
 
 // graph controls
-$('.abutton_modify_link').each(Sner.action_modify_link);
+$('.abutton_modify_link').each(Sner.visuals.action_modify_link);
 </script>
 {% endblock %}
