--- a/sner/server/templates/visuals/portinfos.html
+++ b/sner/server/templates/visuals/portinfos.html
@@ -114,6 +114,6 @@ function draw(words) {
 }
 
 // graph controls
-$('.abutton_modify_link').each(Sner.action_modify_link);
+$('.abutton_modify_link').each(Sner.visuals.action_modify_link);
 </script>
 {% endblock %}
