--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -42,6 +42,7 @@
 	<script type="text/javascript" src="{{ url_for('static', filename='sner/sner.auth.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='sner/sner.scheduler.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='sner/sner.storage.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='sner/sner.visuals.js') }}"></script>
 	<script type="text/javascript">
 		/* NOTE: might be const here, but it does not work inside selenium */
 		var Sner = new SnerModule();
