--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -129,17 +129,17 @@
 			</div>
 			<div class="btn-group">
 				<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
-				<a class="btn btn-outline-secondary abutton_tagmulti" href="#" data-tag="info">Info</a>
-				<a class="btn btn-outline-secondary abutton_tagmulti" href="#" data-tag="report">Report</a>
-				<a class="btn btn-outline-secondary abutton_tagmulti" href="#" data-tag="todo">Todo</a>
+				<a class="btn btn-outline-secondary abutton_tag_multiid" href="#" data-tag="info">Info</a>
+				<a class="btn btn-outline-secondary abutton_tag_multiid" href="#" data-tag="report">Report</a>
+				<a class="btn btn-outline-secondary abutton_tag_multiid" href="#" data-tag="todo">Todo</a>
 			</div>
 			<div class="btn-group">
 				<a class="btn btn-outline-secondary disabled"><i class="fas fa-remove-format"></i></a>
-				<a class="striked btn btn-outline-secondary abutton_untagmulti" href="#" data-tag="info">Info</a>
-				<a class="striked btn btn-outline-secondary abutton_untagmulti" href="#" data-tag="report" >Report</a>
-				<a class="striked btn btn-outline-secondary abutton_untagmulti" href="#" data-tag="todo">Todo</a>
+				<a class="striked btn btn-outline-secondary abutton_untag_multiid" href="#" data-tag="info">Info</a>
+				<a class="striked btn btn-outline-secondary abutton_untag_multiid" href="#" data-tag="report" >Report</a>
+				<a class="striked btn btn-outline-secondary abutton_untag_multiid" href="#" data-tag="todo">Todo</a>
 			</div>
-			<a class="btn btn-outline-secondary abutton_deletemulti" href="#"><i class="fas fa-trash text-danger"></i></a>
+			<a class="btn btn-outline-secondary abutton_delete_multiid" href="#"><i class="fas fa-trash text-danger"></i></a>
 		</div>
 		<table id="host_view_vuln_table" class="table table-hover table-sm" width="100%"></table>
 		<script type="text/javascript">
@@ -171,9 +171,9 @@
 				var dt_host_view_vuln_table = $('#host_view_vuln_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_host_view_vuln_table_options));
 				$('#host_view_vuln_table_toolbar .abutton_selectall').on('click', {'dt': dt_host_view_vuln_table}, Sner.dt.selectall);
 				$('#host_view_vuln_table_toolbar .abutton_selectnone').on('click', {'dt': dt_host_view_vuln_table}, Sner.dt.selectnone);
-				$('#host_view_vuln_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_multiid_route'), 'action': 'set'}, Sner.storage.action_tag_multiid);
-				$('#host_view_vuln_table_toolbar .abutton_untagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_multiid_route'), 'action': 'unset'}, Sner.storage.action_tag_multiid);
-				$('#host_view_vuln_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_delete_multiid_route')}, Sner.storage.action_delete_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
+				$('#host_view_vuln_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_delete_multiid_route'}, Sner.storage.action_delete_multiid);
 			});
 		</script>
 	</div>
