--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -33,9 +33,9 @@
 		var dt_vuln_list_table = $('#vuln_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_vuln_list_table_options));
 		$('#vuln_list_table_toolbar .abutton_selectall').on('click', {'dt': dt_vuln_list_table}, Sner.dt.selectall);
 		$('#vuln_list_table_toolbar .abutton_selectnone').on('click', {'dt': dt_vuln_list_table}, Sner.dt.selectnone);
-		$('#vuln_list_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_vuln_list_table, 'url': Flask.url_for('storage.vuln_tag_multiid_route'), 'action': 'set'}, Sner.storage.action_tag_multiid);
-		$('#vuln_list_table_toolbar .abutton_untagmulti').on('click', {'dt': dt_vuln_list_table, 'url': Flask.url_for('storage.vuln_tag_multiid_route'), 'action': 'unset'}, Sner.storage.action_tag_multiid);
-		$('#vuln_list_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_vuln_list_table, 'url': Flask.url_for('storage.vuln_delete_multiid_route')}, Sner.storage.action_delete_multiid);
+		$('#vuln_list_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_vuln_list_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
+		$('#vuln_list_table_toolbar .abutton_untag_multiid').on('click', {'dt': dt_vuln_list_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'unset'}, Sner.storage.action_tag_multiid);
+		$('#vuln_list_table_toolbar .abutton_delete_multiid').on('click', {'dt': dt_vuln_list_table, 'route_name': 'storage.vuln_delete_multiid_route'}, Sner.storage.action_delete_multiid);
 	});
 </script>
 {% endblock %}
@@ -51,17 +51,17 @@
 	</div>
 	<div class="btn-group">
 		<a class="btn btn-outline-secondary disabled"><i class="fas fa-tag"></i></a>
-		<a class="btn btn-outline-secondary abutton_tagmulti" href="#" data-tag="info">Info</a>
-		<a class="btn btn-outline-secondary abutton_tagmulti" href="#" data-tag="report">Report</a>
-		<a class="btn btn-outline-secondary abutton_tagmulti" href="#" data-tag="todo">Todo</a>
+		<a class="btn btn-outline-secondary abutton_tag_multiid" href="#" data-tag="info">Info</a>
+		<a class="btn btn-outline-secondary abutton_tag_multiid" href="#" data-tag="report">Report</a>
+		<a class="btn btn-outline-secondary abutton_tag_multiid" href="#" data-tag="todo">Todo</a>
 	</div>
 	<div class="btn-group">
 		<a class="btn btn-outline-secondary disabled"><i class="fas fa-remove-format"></i></a>
-		<a class="striked btn btn-outline-secondary abutton_untagmulti" href="#" data-tag="info">Info</a></li>
-		<a class="striked btn btn-outline-secondary abutton_untagmulti" href="#" data-tag="report">Report</a></li>
-		<a class="striked btn btn-outline-secondary abutton_untagmulti" href="#" data-tag="todo">Todo</a></li>
+		<a class="striked btn btn-outline-secondary abutton_untag_multiid" href="#" data-tag="info">Info</a></li>
+		<a class="striked btn btn-outline-secondary abutton_untag_multiid" href="#" data-tag="report">Report</a></li>
+		<a class="striked btn btn-outline-secondary abutton_untag_multiid" href="#" data-tag="todo">Todo</a></li>
 	</div>
-	<a class="btn btn-outline-secondary abutton_deletemulti" href="#"><i class="fas fa-trash text-danger"></i></a>
+	<a class="btn btn-outline-secondary abutton_delete_multiid" href="#"><i class="fas fa-trash text-danger"></i></a>
 	<div class="btn-group">
 		<a class="btn btn-outline-secondary disabled"><i class="fas fa-filter"></i></a>
 		{% if 'filter' in request.args %}<a class="btn btn-info" href="{{ url_for('storage.vuln_list_route') }}">unfilter</a>{% endif %}</h1>
