--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -9,7 +9,10 @@
 		'ajax': {'url': "{{ url_for('scheduler.queue_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			Sner.dt.column('id', {'visible': false}),
-			Sner.dt.column('ident'),
+			Sner.dt.column('name'),
+			Sner.dt.column('module'),
+			Sner.dt.column('params'),
+			Sner.dt.column('group_size'),
 			Sner.dt.column('priority'),
 			Sner.dt.column('active'),
 			Sner.dt.column('nr_targets'),
