server, agent: towards rich module configuration (params to config rename)

--- a/sner/server/templates/scheduler/queue/addedit.html
+++ b/sner/server/templates/scheduler/queue/addedit.html
@@ -10,7 +10,7 @@
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.name, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.module, horizontal=True) }}
-	{{ bwtf.bootstrap_field(form.params, horizontal=True) }}
+	{{ bwtf.bootstrap_field(form.config, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.group_size, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.priority, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.active, horizontal=True) }}
