--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -11,7 +11,7 @@
 			Sner.dt.column('id', {'visible': false}),
 			Sner.dt.column('name'),
 			Sner.dt.column('module'),
-			Sner.dt.column('params'),
+			Sner.dt.column('config'),
 			Sner.dt.column('group_size'),
 			Sner.dt.column('priority'),
 			Sner.dt.column('active'),
