server, agent: towards rich module configuration (structured config impl)

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -35,6 +35,9 @@
 
 	<script type="text/javascript" src="{{ url_for('static', filename='handlebars/handlebars.min.js') }}"></script>
 
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='highlight/default.min.css') }}" />
+	<script type="text/javascript" src="{{ url_for('static', filename='highlight/highlight.min.js') }}"></script>
+
 	{{ JSGlue.include() }}
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='sner/sner.css') }}" />
