storage: service port states filter does not propagate to portstat fragment
https://gitlab.flab.cesnet.cz/bodik/sner4/-/issues/226

--- a/sner/server/templates/visuals/portmap.html
+++ b/sner/server/templates/visuals/portmap.html
@@ -22,8 +22,13 @@ table.borderless tbody tr td { border: none; }
 
 	$(document).ready(function() {
 		$('.portmap_item').on('mouseenter', function() {
+			var route_args = {'port': $(this).attr('data-port')};
+			var filter = new URLSearchParams(window.location.search).get('filter');
+			if (filter) {
+				route_args['filter'] = filter;
+			}
 			$.ajax({
-				url: Flask.url_for('visuals.portmap_portstat_route', {'port': $(this).attr('data-port')}),
+				url: Flask.url_for('visuals.portmap_portstat_route', route_args),
 				success: function (data, status, jqXHR) { $('#port_detail').html(data);	}
 			});
 		});
